# taskflow-rs

./: .gitignore  ADVANCED_CONDITIONS.md  ADVANCED_FEATURES.md  ASYNC_PARALLEL.md  ASYNC_TASKS.md  BENCHMARKING.md  COMPOSITION.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  ENHANCED_COMPOSITION.md  GPU.md  GPU_SETUP.md  LOOPS_AND_CYCLES.md  PARALLEL_RUN.md  PARALLEL_SCAN.md  PIPELINE.md  README.md  RUN_VARIANTS.md  TESTING_ASYNC.md  TESTING_PIPELINE.md  TOOLING.md  WORK_STEALING.md
.github/workflows/: ci.yml  dependabot.yml
examples/: advanced_conditions.rs  advanced_features.rs  advanced_tooling_demo.rs  algo_benchmark.rs  async_parallel.rs  async_run_variants.rs  async_tasks.rs  basic.rs  benchmark.rs  benchmark_heavy.rs  composition.rs  composition_debug.rs  debug_test.rs  dynamic_priority.rs  enhanced_composition.rs  gpu_async_streams.rs  gpu_pipeline.rs  gpu_tasks.rs  hardware_topology.rs  loop_and_cycle_detection.rs  metrics_demo.rs  minimal_test.rs  parallel_algorithms.rs  parallel_patterns.rs  parallel_run_n.rs  parallel_scan.rs  pipeline_advanced.rs  pipeline_basic.rs  pipeline_benchmark.rs  pipeline_minimal.rs  preemptive_cancellation.rs  run_variants.rs  run_variants_practical.rs  scale_test.rs  test_tooling_imports.rs  tooling_demo.rs  typed_pipeline.rs
src/: advanced.rs  algorithms.rs  async_executor.rs  build.rs  composition.rs  condition.rs  cycle_detection.rs  dashboard.rs  debug.rs  dynamic_priority.rs  executor.rs  flamegraph.rs  future.rs  gpu.rs  gpu_backend.rs  gpu_cuda_backend.rs  gpu_opencl.rs  gpu_rocm.rs  gpu_stream.rs  hwloc_topology.rs  lib.rs  lib_additions.rs  metrics.rs  monitoring.rs  numa.rs  pipeline.rs  preemptive.rs  profiler.rs  regression.rs  scheduler.rs  subflow.rs  task.rs  taskflow.rs  typed_pipeline.rs  visualization.rs
tests/: integration_tests.rs
